--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,7 +6,7 @@
     <title>Mod Flare</title>
 
 
-    <meta name="description" content="PINE X - Protect yourself and your projects">
+    <meta name="description" content="Mod Flare ">
     <meta name='theme-color' content='#262626' date=react-helmet='true'>
 
     <link rel="icon" href="pine_x.png">
@@ -39,9 +39,6 @@
             align-items: center;
             text-align: center;
             padding-top: 55px; 
-        
-            
-        
         }
         
         
