--- a/main/templates/main/user_info.html
+++ b/main/templates/main/user_info.html
@@ -163,6 +163,7 @@
         
         .hero-content {
             max-width: 650px;
+            min-width: 450px;
             padding: 30px;
             background-color: #3e3e3e;
 
@@ -262,10 +263,34 @@
         </nav>
     </header>
 
+    <div class="hero">
+        <div class="hero-content">
+            {% if request.session.user %}
+            <div class="user-info">
+                <p>Welcom {{ request.session.user.username }}</p>
+            </div>
+            {% else %}
+            <div class="user-info">
+                <p>Пожалуйста войдите в свой аккаунт чтоб узнать информацию</p>
+            </div>
+            {% endif %} 
+        </div>
+    </div>
+
     <div class="auto-mod-section">
         {% if request.session.user %}
         <div class="user-info">
             <p>Your user name: {{ request.session.user.username }}</p>
+            <p>Your ID: {{ request.session.user.id }}</p>
+            <p>Your avatar: {{ request.session.user.avatar }}</p>
+            <p>Your email: {{ request.session.user.email }}</p>
+            <p>Your banner: {{ request.session.user.banner }}</p>
+
+            <p>Your locale: {{ request.session.user.locale }}</p>
+            <p>Your premium type: {{ request.session.user.premium_type }}</p>
+            <p>Your Public Flags: {{ request.session.user.public_flags }}</p>
+            <p>Your connections : {{ request.session.user.connections  }}</p>
+
         </div>
         {% endif %} 
     </div>
