--- a/main/templates/main/user_info.html
+++ b/main/templates/main/user_info.html
@@ -237,6 +237,7 @@
         .auto-mod-section p,
         .auto-mod-section h1 {
             text-align: center;
+            color: #222222;
         }
     </style>
 
