--- a/main/templates/main/user_info.html
+++ b/main/templates/main/user_info.html
@@ -281,16 +281,16 @@
     <div class="auto-mod-section">
         {% if request.session.user %}
         <div class="user-info">
-            <p>Your user name: {{ request.session.user.username }}</p>
-            <p>Your ID: {{ request.session.user.id }}</p>
-            <p>Your avatar: {{ request.session.user.avatar }}</p>
-            <p>Your email: {{ request.session.user.email }}</p>
-            <p>Your banner: {{ request.session.user.banner }}</p>
+            <p>Your user name: {{ request.session.user.username }}</p><br>
+            <p>Your ID: {{ request.session.user.id }}</p><br>
+            <p>Your avatar: <img src="https://cdn.discordapp.com/avatars/{{ request.session.user.id }}/{{ request.session.user.avatar }}.png" class="avatar" width="50"></p><br>
+            <p>Your email: {{ request.session.user.email }}</p><br>
+            <p>Your banner: {{ request.session.user.banner }}</p><br>
 
-            <p>Your locale: {{ request.session.user.locale }}</p>
-            <p>Your premium type: {{ request.session.user.premium_type }}</p>
-            <p>Your Public Flags: {{ request.session.user.public_flags }}</p>
-            <p>Your connections : {{ request.session.user.connections  }}</p>
+            <p>Your locale: {{ request.session.user.locale }}</p><br>
+            <p>Your premium type: {{ request.session.user.premium_type }}</p><br>
+            <p>Your Public Flags: {{ request.session.user.public_flags }}</p><br>
+            <p>Your connections : {{ request.session.user.connections  }}</p><br>
 
         </div>
         {% endif %} 
