--- a/main/templates/main/user_info.html
+++ b/main/templates/main/user_info.html
@@ -214,25 +214,25 @@
 
 
         .auto-mod-section {
-            text-align: center; /* Центрируем всё содержимое */
-            margin-bottom: 20px; /* Отступ между секциями */
-            padding: 0 20px; /* Отступы слева и справа */
+            text-align: center; 
+            margin-bottom: 20px; 
+            padding: 0 20px; 
         }
         
         .auto-mod-heading {
             font-size: 30px;
-            color: #333333; /* Темно-серый цвет */
-            text-align: center; /* Центрируем заголовок */
-            margin: 20px 0 10px 0; /* Отступ вниз */
+            color: #333333; 
+            text-align: center; 
+            margin: 20px 0 10px 0; 
             font-weight: bold;
         }
         
         .auto-mod-text {
             font-size: 18px;
-            color: #222222; /* Цвет текста */
-            text-align: center; /* Центрируем текст */
-            margin: 0 0 30px 0; /* Отступ вниз */
-            line-height: 1.5; /* Улучшенная читаемость */
+            color: #222222; 
+            text-align: center; 
+            margin: 0 0 30px 0; 
+            line-height: 1.5; 
         }
         
         .auto-mod-section p {
@@ -397,6 +397,7 @@
             <p>Your user name: {{ request.session.user.username }}<br>
             <p>Your ID: {{ request.session.user.id }}<br>
             <p>Your avatar: <img src="https://cdn.discordapp.com/avatars/{{ request.session.user.id }}/{{ request.session.user.avatar }}.png" class="avatar" width="50"><br>
+            <p>Your email: {{ request.session.user.email }}<br>
 
         </div>
         {% endif %} 
