--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -70,6 +70,11 @@
             margin-right: 10px;
             border-radius: 50%;
         }
+        .logo a {
+            color: #ffffff;
+            text-decoration: none;
+        }
+        
         
         .header-links {
             display: flex;
@@ -599,7 +604,7 @@
 <body>
     <header>
         <div class='logo'>
-            <h3>Mod Flare</h3>
+            <h3><a href='/'>Mod Flare</a></h3>
         
         </div>
 
