--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -574,7 +574,7 @@
       }
 
     </style>
-
+    <meta name="google-site-verification" content="cdZAAlGsLAQPuWaJJ8LuRhdEy0vNEYUsG-3E7OyNvyk" />
 </head>
 <body>
     <header>
